# tailwind-lite

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: apply.rs  candidate.rs  compiler.rs  css_functions.rs  input.rs  main.rs  output.rs  scanner.rs  theme.rs  utilities.rs  variants.rs
test/dnd-world/: expected.css  input.css
test/dnd-world/src/: App.tsx
test/dnd-world/src/components/: PipelinePanel.tsx  RiverPoC.tsx  SlopePoC.tsx  TerrainCanvas.tsx
test/globe-app/: expected.css
test/globe-app/src/: App.tsx  Globe.tsx
test/idle-game/: expected.css  input.css
test/idle-game/src/: global.css  main.tsx  router.tsx  vite-env.d.ts
test/idle-game/src/auth/: authFlow.test.ts
test/idle-game/src/config/: featureFlags.ts
test/idle-game/src/contexts/: AIViewerContext.tsx  GameEngineContext.tsx  GameTimeContext.tsx
test/idle-game/src/game/: index.ts
test/idle-game/src/hooks/: index.ts  useAIViewer.ts  useAnimatedValue.ts  useAsync.ts  useAuth.ts  useClickOutside.ts  useCloudSave.ts  useCloudSync.ts  useConvexBreeding.ts  useConvexCrafting.ts  useConvexExpeditions.ts  useConvexFarming.ts  useConvexGacha.ts  useConvexGalaxy.ts  useConvexGame.test.ts  useConvexGame.ts  useConvexGameState.ts  useConvexManagers.ts  useConvexProgression.ts  useConvexRefinement.ts  useConvexResearch.ts  useConvexRewards.ts  useConvexSeeds.ts  useCopyToClipboard.ts  useCountUp.ts  useCounter.ts  useCyclingProgress.ts  useDebounce.ts  (+34 more)
test/paleo-editor/: expected.css  input.css
test/stress/: expected.css
test/stress/src/: test.html
(+318 files in other folders)
